<resources>
    <string name="app_name">Datadora</string>

    // Error Messages
    <string name="NumberInvalid">This number is invalid</string>
    <string name="EmptyNumber">Please enter a number</string>
    <string name="Overflow">Overflow</string>
    <string name="Underflow">Underflow</string>

    // All Data structures Activity
    <string name="All_Data_Activity_Stack">Stack</string>
    <string name="All_Data_Activity_Queue">Queue</string>
    <string name="All_Data_Activity_Single_LinkedList">Single Linked List</string>
    <string name="All_Data_Activity_Double_LinkedList">Double Linked List</string>
    <string name="All_Data_Activity_BST">Binary Search Tree</string>

    <string name="All_Data_Activity_Text_Return">Return Value</string>
    <string name="All_Data_Activity_Text_Random">Random</string>
    <string name="All_Data_Activity_Text_Clear">Clear</string>
    <string name="All_Data_Activity_Text_Size">Size</string>

    <string name="All_Data_Activity_Text_Saved">Datastructure was successfully saved</string>
    <string name="All_Data_Activity_Text_FromSave">Datastructure restored from last save</string>

    <string name="All_Data_Activity_True">true</string>
    <string name="All_Data_Activity_False">false</string>

    <string name="All_Data_Activity_Text_Animation">Please wait till the animation is over :)</string>
    <string name="All_Data_Activity_Root">Root don\'t has a parent</string>

    // Main Activity
    <string name="Main_Activity_About">About</string>

    // About Activity
    <string name="About_Activity_Slogan">We adore data!</string>
    <string name="About_Activity_Description">This app helps you to understand various data structures. Have fun playing around with nodes and watching how the data structure behaves.\n\nSave paper - use Datadora!</string>
    <string name="About_Activity_Developer">The following developers worked on this project:</string>
    <string name="About_Activity_Yvonne">Yvonne Kathrin Eder</string>
    <string name="About_Activity_Ines">Ines Langbauer</string>
    <string name="About_Activity_Gerald">Gerald Lehner</string>
    <string name="About_Activity_University">FH Hagenberg Mobile Computing</string>

    // Stack Activity
    <string name="Stack_Activity_Text_Peek">peek</string>
    <string name="Stack_Activity_Text_Empty">isEmpty</string>

    <string name="Stack_Activity_Full">Stack is full</string>
    <string name="Stack_Activity_Empty">Stack is empty</string>

    <string name="Stack_Activity_Text_Push">push</string>
    <string name="Stack_Activity_Text_Pop">pop</string>

    // Queue Activity
    <string name="Queue_Activity_Text_Peek">peek</string>
    <string name="Queue_Activity_Text_Empty">isEmpty</string>

    <string name="Queue_Activity_Full">Queue is full</string>
    <string name="Queue_Activity_Empty">Queue is empty</string>

    <string name="Queue_Activity_Text_Dequeue">dequeue</string>
    <string name="Queue_Activity_Text_Enqueue">enqueue</string>

    // SingleLinkedList Activity
    <string name="LinkedList_Activity_Type_Title">Type</string>
    <string name="LinkedList_Activity_Type_Sorted">Sorted</string>
    <string name="LinkedList_Activity_Type_Unsorted">Unsorted</string>
    <string name="LinkedList_Activity_Type_Head">Head</string>
    <string name="LinkedList_Activity_Type_Tail">Tail</string>
    <string name="LinkedList_Activity_Type_Both">Head &amp; Tail</string>

    <string name="LinkedList_Activity_Add_Title">Add</string>
    <string name="LinkedList_Activity_Add_Prepend">Prepend</string>
    <string name="LinkedList_Activity_Add_Append">Append</string>
    <string name="LinkedList_Activity_Add_At">Insert at</string>

    <string name="LinkedList_Activity_Delete_Title">Delete</string>
    <string name="LinkedList_Activity_Delete_First">Delete First</string>
    <string name="LinkedList_Activity_Delete_Last">Delete Last</string>
    <string name="LinkedList_Activity_Delete_At">Delete at</string>
    <string name="LinkedList_Activity_Delete_All">Clear</string>

    <string name="LinkedList_Activity_Get_Title">Get</string>
    <string name="LinkedList_Activity_Get_Predecessor">Predecessor</string>
    <string name="LinkedList_Activity_Get_Successor">Successor</string>
    <string name="LinkedList_Activity_Get_First">Get First</string>
    <string name="LinkedList_Activity_Get_Last">Get Last</string>
    <string name="LinkedList_Activity_Get_At">Get at</string>

    <string name="LinkedList_Activity_Toast_Full">List is full!</string>
    <string name="LinkedList_Activity_Toast_Empty">List is empty!</string>
    <string name="LinkedList_Activity_Toast_Feature">This feature is coming soon</string>

    // BinarySearchTree
    <string name="BST_Activity_Empty">Tree is empty</string>

    <string name="BST_Activity_Text_Inorder">Inorder</string>
    <string name="BST_Activity_Text_Preorder">Preorder</string>
    <string name="BST_Activity_Text_Postorder">Postorder</string>

    <string name="BST_Activity_Standard_Title">Standard</string>
    <string name="BST_Activity_Standard_Add">Add</string>
    <string name="BST_Activity_Standard_Remove">Remove</string>
    <string name="BST_Activity_Standard_Random">Random Add</string>
    <string name="BST_Activity_Standard_Random_tree">Random Tree</string>

    <string name="BST_Activity_Structure_Title">Structure</string>
    <string name="BST_Activity_Structure_Size">Size</string>
    <string name="BST_Activity_Structure_Height">Height</string>
    <string name="BST_Activity_Structure_Depth">Depth</string>

    <string name="BST_Activity_Check_Title">Check</string>
    <string name="BST_Activity_Check_Root">Is Root</string>
    <string name="BST_Activity_Check_External">Is External</string>
    <string name="BST_Activity_Check_Internal">Is Internal</string>
    <string name="BST_Activity_Check_LeftChild">Has Left Child</string>
    <string name="BST_Activity_Check_RightChild">Has Right Child</string>
    <string name="BST_Activity_Check_Child">Has Child</string>
    <string name="BST_Activity_Check_Parent">Has Parent</string>
    <string name="BST_Activity_Check_Empty">Is Empty</string>
    <string name="BST_Activity_Check_NotEmpty">Is not Empty</string>

    <string name="BST_Activity_Get_Title">Get</string>
    <string name="BST_Activity_Get_LeftChild">Left Child</string>
    <string name="BST_Activity_Get_RightChild">Right Child</string>
    <string name="BST_Activity_Get_Parent">Parent</string>
    <string name="BST_Activity_Get_Root">Root</string>
    <string name="BST_Activity_Get_External">External Nodes</string>
    <string name="BST_Activity_Get_Internal">Internal Nodes</string>
    <string name="BST_Activity_Get_Max">Max</string>
    <string name="BST_Activity_Get_Min">Min</string>

    <string name="BST_Activity_Center">Tree is already in the center</string>
    <string name="BST_Activity_Select_Move">To select a node please leave the move mode</string>
    <string name="BST_Activity_Select_Toast">Please choose a node</string>
    <string name="BST_Activity_Add_Toast">This number is already in the tree</string>


    // Toolbar
    <string name="Toolbar_Action_Settings">Settings</string>
    <string name="Toolbar_Action_ModeSwitch">Switch modes</string>
    <string name="Toolbar_action_Save">Save</string>

    // Slider
    <string name="Slider_Current_Value">Current value: </string>
    <string name="Slider_Default_Value">0</string>

    <string name="Content_Description_Queue_Line">A line that is used to split the display into two visual parts, one for the queue and one for the input of the queue</string>
    <string name="Content_Description_Queue_FlowIcon">An icon used to display an x if the queue is empty or a check-mark if the queue is full</string>
    <string name="Content_Description_Queue_Return_Background">A rectangle that serves as the background of the returned values of the available operations</string>

    <string name="Content_Description_LinkedList_Type_Background">A rectangle that serves as the background of the operation group type</string>
    <string name="Content_Description_LinkedList_Type_Arrow">An arrow that opens and closes the available operations of the group type</string>

    <string name="Content_Description_LinkedList_Add_Background">A rectangle that serves as the background of the operation group add</string>
    <string name="Content_Description_LinkedList_Add_Arrow">An arrow that opens and closes the available operations of the group add</string>
    <string name="Content_Description_LinkedList_Add_Check">A check sign that conforms the chosen adding operation for the current value selected by the slider</string>

    <string name="Content_Description_LinkedList_Delete_Background">A rectangle that serves as the background of the operation group delete</string>
    <string name="Content_Description_LinkedList_Delete_Arrow">An arrow that opens and closes the available operations of the group delete</string>

    <string name="Content_Description_LinkedList_Get_Background">A rectangle that serves as the background of the operation group get</string>
    <string name="Content_Description_LinkedList_Get_Arrow">An arrow that opens and closes the available operations of the group get</string>
    <string name="LinkedList_Activity_Pre_Succ_Hint">Select element</string>

    <string name="LinkedList_Activity_Pre_Empty">This node has no predecessor</string>
    <string name="LinkedList_Activity_Succ_Empty">This node has no successor</string>
    <string name="Setting_Activity_AnimSpeed">Animation speed</string>
    <string name="Settings_Activity_Theme">Dark mode</string>


</resources>