<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BST_Fragment_Parent"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/BST_Activity_Get_Parent"
                app:layout_constraintBottom_toTopOf="@+id/BST_Fragment_InternalNodes"
                app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_LeftChild"
                app:layout_constraintStart_toStartOf="@+id/BST_Fragment_Root"
                app:layout_constraintTop_toBottomOf="@+id/BST_Fragment_Root" />

            <Button
                android:id="@+id/BST_Fragment_RightChild"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/BST_Activity_Get_RightChild"
                app:layout_constraintEnd_toEndOf="@+id/BST_Fragment_Max"
                app:layout_constraintStart_toEndOf="@+id/BST_Fragment_LeftChild"
                app:layout_constraintTop_toTopOf="@+id/BST_Fragment_LeftChild" />

            <Button
                android:id="@+id/BST_Fragment_LeftChild"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/BST_Activity_Get_LeftChild"
                app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_RightChild"
                app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Parent"
                app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Parent" />

            <Button
                android:id="@+id/BST_Fragment_Root"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/BST_Activity_Get_Root"
                app:layout_constraintBottom_toTopOf="@+id/BST_Fragment_Parent"
                app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_Min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/BST_Fragment_ExternalNodes"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/BST_Activity_Get_External"
                app:layout_constraintEnd_toEndOf="@+id/BST_Fragment_RightChild"
                app:layout_constraintStart_toEndOf="@+id/BST_Fragment_InternalNodes"
                app:layout_constraintTop_toTopOf="@+id/BST_Fragment_InternalNodes" />

            <Button
                android:id="@+id/BST_Fragment_InternalNodes"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/BST_Activity_Get_Internal"
                app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_ExternalNodes"
                app:layout_constraintStart_toStartOf="@+id/BST_Fragment_Parent"
                app:layout_constraintTop_toBottomOf="@+id/BST_Fragment_Parent" />

            <Button
                android:id="@+id/BST_Fragment_Max"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/BST_Activity_Get_Max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Min"
                app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Min" />

            <Button
                android:id="@+id/BST_Fragment_Min"
                style="@style/Tree_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/BST_Activity_Get_Min"
                app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_Max"
                app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Root"
                app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Root" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>