<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/BST_Fragment_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/BST_Activity_Standard_Add"
        app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_Remove"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BST_Fragment_Remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/BST_Activity_Standard_Remove"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@+id/BST_Fragment_Add"
        app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_Random"
        app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Add"
        app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Add" />

    <Button
        android:id="@+id/BST_Fragment_Random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/All_Data_Activity_Text_Random"
        app:layout_constraintBottom_toBottomOf="@+id/BST_Fragment_Remove"
        app:layout_constraintEnd_toStartOf="@+id/BST_Fragment_Clear"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Remove"
        app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Remove" />

    <Button
        android:id="@+id/BST_Fragment_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/All_Data_Activity_Text_Clear"
        app:layout_constraintBottom_toBottomOf="@+id/BST_Fragment_Random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/BST_Fragment_Random"
        app:layout_constraintTop_toTopOf="@+id/BST_Fragment_Random" />
</androidx.constraintlayout.widget.ConstraintLayout>