<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/LinkedList_Fragment_Predec"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/LinkedList_Activity_Get_Predecessor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Size" />

            <Button
                android:id="@+id/LinkedList_Fragment_Size"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/All_Data_Activity_Text_Size"
                app:layout_constraintEnd_toEndOf="@+id/LinkedList_Fragment_Predec"
                app:layout_constraintStart_toStartOf="@+id/LinkedList_Fragment_Predec"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/LinkedList_Fragment_Succ"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LinkedList_Activity_Get_Successor"
                app:layout_constraintEnd_toEndOf="@+id/LinkedList_Fragment_Predec"
                app:layout_constraintStart_toStartOf="@+id/LinkedList_Fragment_Predec"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Predec" />

            <Button
                android:id="@+id/LinkedList_Fragment_Get_First"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LinkedList_Activity_Get_First"
                app:layout_constraintEnd_toEndOf="@+id/LinkedList_Fragment_Succ"
                app:layout_constraintStart_toStartOf="@+id/LinkedList_Fragment_Succ"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Succ" />

            <Button
                android:id="@+id/LinkedList_Fragment_Get_Last"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LinkedList_Activity_Get_Last"
                app:layout_constraintEnd_toEndOf="@+id/LinkedList_Fragment_Get_First"
                app:layout_constraintStart_toStartOf="@+id/LinkedList_Fragment_Get_First"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Get_First" />

            <Button
                android:id="@+id/LinkedList_Fragment_Get_At"
                style="@style/List_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LinkedList_Activity_Get_At"
                app:layout_constraintEnd_toEndOf="@+id/LinkedList_Fragment_Get_First"
                app:layout_constraintStart_toStartOf="@+id/LinkedList_Fragment_Get_First"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Get_Last" />

            <com.google.android.material.slider.Slider
                android:id="@+id/LinkedList_Fragment_Get_Slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:theme="@style/AppTheme"
                android:value="0.0"
                android:valueFrom="-100.0"
                android:valueTo="100.0"
                app:labelBehavior="withinBounds"
                app:layout_constraintBottom_toBottomOf="@+id/LinkedList_Fragment_Get_At"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinkedList_Fragment_Get_At" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>